schema/testdata/errors/enum_default_multiple_conditions.keel
model Post {
    fields {
        //expect-error:41:43:AttributeExpressionError:operator '||' not supported in this context
        published Boolean @default(true || false)
    }
}
